Part1/Exercise 1.07 External access with Ingress/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-service
spec:
  selector:
    app: log-output
  ports:
    - protocol: TCP
      port: 173
      targetPort: 3000
