Part1/Exercise 1.07 External access with Ingress/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /status
        pathType: Prefix
        backend:
          service:
            name: log-output-service
            port:
              number: 173
